--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fastify/secure-session": "^5.2.0",
     "fastify": "^4.5.2",
     "ts-node": "^10.9.1",
     "typescript": "*"
