--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "ts-node server.ts"
+    "start": "ts-node server.ts",
+    "generate:readme": "swagger-markdown -i ./swagger.yml -o README.md"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
@@ -17,12 +18,14 @@
     "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "swagger-markdown": "^1.4.6"
   },
   "eslintConfig": {
     "env": {
       "node": true
     },
     "rules": {}
-  }
+  },
+  "license": "MIT"
 }
