--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "@fastify/cookie": "^8.0.0",
-    "@fastify/cors": "^8.1.0",
-    "@fastify/jwt": "^6.3.2",
-    "@fastify/session": "^9.0.0",
-    "fastify": "^4.5.2",
+    "@fastify/cookie": "^9.0.4",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.2.0",
+    "@fastify/session": "^10.4.0",
+    "fastify": "^4.22.0",
     "ts-node": "^10.9.1",
-    "typescript": "*"
+    "typescript": "5.2.2"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -14,14 +14,14 @@
     "generate:readme": "swagger-markdown -i ./swagger.yml -o README.md"
   },
   "devDependencies": {
-    "@types/node": "^18.7.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "swagger-markdown": "^1.4.6"
+    "@types/node": "^20.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "eslint": "^8.48.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "swagger-markdown": "^2.3.0"
   },
   "eslintConfig": {
     "env": {
